--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,11 +10,14 @@ body {
 
 .header {
     padding: 20px;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
     color: #ffffff;
 }
 
+.header,.footer {
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+
+}
 .header h1 {
     display: inline-block;
     font-size: 48px;
@@ -28,8 +31,15 @@ body {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
+}
+
+.header nav, 
+.search-engine-optimization,
+.online-reputation-management,
+.social-media-marketing,
+.benefits {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 20px;
+
 }
 
 .header nav ul {
@@ -61,12 +71,15 @@ p {
 
 .float-left {
     float: left;
-    margin-right: 25px;
 }
 
 .float-right {
-    float: right;
-    margin-left: 25px;
+    float: right;   
+}
+
+.float-left,
+.float-right{
+    margin-right: 25px;
 }
 
 .content {
@@ -82,7 +95,6 @@ p {
     float: right;
     width: 20%;
     height: 100%;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #2589bd;
 }
 
@@ -116,7 +128,6 @@ p {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #0072bb;
     color: #ffffff;
 }
@@ -138,7 +149,6 @@ p {
 .footer {
     padding: 30px;
     clear: both;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
 }
 
